kubernetes/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-svc
  namespace: monitoring
  labels:
    name: uptime-kuma-svc
spec:
  type: ClusterIP
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
      targetPort: 3001
