kubernetes/uptime-kuma/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingress
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.kube.crowlight.com`)
      kind: Rule
      services:
        - name: uptime-kuma-svc
          port: 3001
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: kube-crowlight-com-tls
